[package]
name = "overlay-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["concordium-std/std"]

[dependencies]
concordium-std = { version = "6.1.0", default-features = false }

[dev-dependencies]
concordium-std = { version = "6.1.0", features = ["std"] }

[lib]
crate-type=["cdylib", "rlib"]
